80% done home page. Need to at responsiveness.

--- a/styles/home.css
+++ b/styles/home.css
@@ -6,6 +6,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Jost', sans-serif;
+    font-size: 16px;
+    min-height: 100vh;
 }
 
 /**Colors*/
@@ -24,7 +26,6 @@ body {
 /**contains everything in the body*/
 .main {
     padding: 3rem;
-    min-height: 100vh;
 }
 
 /**First div that holds the entire navBar*/
@@ -62,5 +63,44 @@ body {
     font-family: 'philosopher', sans-serif;
     text-decoration: none;
     color: black;
-    
+    font-size: 1.0rem;
 }
+
+/**container that holds body content*/
+.body_container{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 80vh;
+    flex-wrap: wrap;
+}
+
+/**contains text*/
+.text_content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 50vw;
+    height: 80vh;
+}
+
+.home_content_headerOne{
+    font-size: 5rem;
+    margin: 0;
+}
+
+.home_content_headerFour{
+    font-size: 2rem;
+    margin-bottom: 0.2rem;
+}
+
+.home_content_p{
+    font-size: 1rem;
+    margin: 0;
+}
+
+.body_content_logo{
+    width: 22rem;
+}
+
