--- a/styles/home.css
+++ b/styles/home.css
@@ -11,7 +11,7 @@ body {
 }
 
 /**Colors*/
-:root{
+:root {
     --lightGreen: #EBFFEE;
     --mantisGreen: #5FBF6A;
     --sproutGreen: #3B9545;
@@ -29,9 +29,9 @@ body {
 }
 
 /**First div that holds the entire navBar*/
-.navBar_container{
+.navBar_container {
     width: 100%;
-    background: var(--mantisGreen) ;
+    background: var(--mantisGreen);
     opacity: 0.9;
     padding: 0;
     margin: 0;
@@ -40,7 +40,7 @@ body {
 }
 
 /**container than holds the logo in the navBar*/
-.navBar_logo_container{
+.navBar_logo_container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,7 +51,7 @@ body {
 }
 
 /**Container that holds all the links in the navBar*/
-.navBar_links_container{
+.navBar_links_container {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -59,7 +59,7 @@ body {
 }
 
 /**links in the navBar*/
-.navBar_links{
+.navBar_links {
     font-family: 'philosopher', sans-serif;
     text-decoration: none;
     color: black;
@@ -67,7 +67,7 @@ body {
 }
 
 /**container that holds body content*/
-.body_container{
+.body_container {
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -76,7 +76,7 @@ body {
 }
 
 /**contains text*/
-.text_content{
+.text_content {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -85,22 +85,25 @@ body {
     height: 80vh;
 }
 
-.home_content_headerOne{
+/**home text content*/
+.home_content_headerOne {
     font-size: 5rem;
     margin: 0;
 }
 
-.home_content_headerFour{
+.home_content_headerFour {
     font-size: 2rem;
     margin-bottom: 0.2rem;
 }
 
-.home_content_p{
+.home_content_p {
     font-size: 1rem;
     margin: 0;
 }
 
-.body_content_logo{
+/**home page logo in body content*/
+.body_content_logo {
     width: 22rem;
 }
 
+/**Need to add breaking points for responsiveness*/
