left note for headFour on homepage in css

--- a/styles/home.css
+++ b/styles/home.css
@@ -91,6 +91,7 @@ body {
     margin: 0;
 }
 
+/**!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! Reduce font-weight*/
 .home_content_headerFour {
     font-size: 2rem;
     margin-bottom: 0.2rem;
