--- a/styles/logo.css
+++ b/styles/logo.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
+html,
+body{
+    height: 100%;
+}
 body {
     background-image: url(../public/background-img/background.svg);
     background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Jost', sans-serif;
     font-size: 16px;
+    padding: 3rem;
+    margin: 0;
 }
 
 /**Colors*/
@@ -23,9 +28,7 @@ body {
 }
 
 /**contains everything in the body*/
-.main {
-    padding: 3rem;
-}
+
 
 /**First div that holds the entire navBar*/
 .navBar_container {
@@ -67,63 +70,48 @@ body {
 }
 
 /**Body Content*/
-/**container that holds body content*/
-.body_container {
+.body_container{
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    justify-content: flex-start;
+    align-items: center;
     flex-wrap: wrap;
 }
 
-.text_container{
+.logo_text_container{
     display: flex;
-}
-/**contains text*/
-.text_content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
-    width: 50vw;
-    height: 70vh;
 }
 
-/**home text content*/
-.home_content_headerOne {
+.logo_text_h1{
     font-size: 5rem;
     margin: 0;
-    line-height: 5.5rem;
 }
 
-.home_content_headerFour {
-    font-size: 2rem;
-    margin-top: 2rem;
-    margin-bottom: 0.2rem;
-    font-weight: 400;
-    color: var(--polyGreen);
-    line-height: 2.5rem;
-}
-
-.home_content_p {
-    font-size: 1rem;
-    margin: 0;
-}
-
-.body_content_logo_container{
+.logo_desc_wrapper{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-/**home page logo in body content*/
-.body_content_logo {
-    width: 22rem;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
 }
 
-.logo_shadow{
-    background-color: black;
-    height: 1rem;
-    border-radius: 100%;
-    opacity: 0.2;
-}
-
-/**Need to add breaking points for responsiveness*/
+.intro_desc_container {
+    margin-top: 2rem;
+  }
+  
+  .intro_text_h4 {
+    font-size: 1.5rem;
+    line-height: 1.5;
+    font-weight: 400;
+    margin: 1rem 0;
+  }
+  
+  .intro_subtext_h6 {
+    font-size: 1rem;
+    font-weight: 400;
+    margin-top: 1rem;
+    color: var(--polyGreen);
+  }
+  
+  .intro_arrow_container {
+    margin-top: 2rem;
+  }
