--- a/styles/logo.css
+++ b/styles/logo.css
@@ -72,8 +72,51 @@ body {
 /**Body Content*/
 .body_container{
     display: flex;
-    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 100%;
+}
+
+.intro_container{
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    height: 60%;
+    width: 80%;
+    justify-content: center;
+}
+
+.intro_wrapper{
+    display: flex;
+    justify-content: space-between;
+    gap: 15rem;
+}
+
+.logo_text_h1{
+    font-size: 5rem;
+    margin: 0;
+}
+
+.intro_text_h4 {
+    font-size: 1.5rem;
+    line-height: 1.5;
+    font-weight: 400;
+  }
+  
+  .intro_subtext_h6 {
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--polyGreen);
+  }
+
+.intro_arrow_container {
+   padding-left: 10rem;
+}
+
+/**.body_container{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     flex-wrap: wrap;
 }
 
@@ -113,5 +156,5 @@ body {
   }
   
   .intro_arrow_container {
-    margin-top: 2rem;
+   
   }
