--- a/styles/logo.css
+++ b/styles/logo.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-html,
-body{
-    height: 100%;
+
+html {
+    scroll-behavior: smooth;
 }
+
 body {
     background-image: url(../public/background-img/background.svg);
     background-size: cover;
@@ -12,6 +13,7 @@ body {
     font-size: 16px;
     padding: 3rem;
     margin: 0;
+
 }
 
 /**Colors*/
@@ -35,11 +37,10 @@ body {
     width: 100%;
     background: var(--mantisGreen);
     opacity: 0.9;
-    padding: 0;
+    gap: 2rem;
     margin: 0;
     border-radius: 3rem;
     display: flex;
-    height: 6vh;
 }
 
 /**container than holds the logo in the navBar*/
@@ -58,7 +59,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 100%;
+    flex-grow: 1;
+    flex-wrap: wrap;
 }
 
 /**links in the navBar*/
@@ -70,91 +72,64 @@ body {
 }
 
 /**Body Content*/
-.body_container{
+
+/**section 1*/
+.introduction {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    height: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    padding: 3rem;
 }
 
-.intro_container{
+.empty_div {}
+
+.logo_text_container {
+    flex-grow: 1;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 60%;
-    width: 80%;
     justify-content: center;
 }
 
-.intro_wrapper{
-    display: flex;
-    justify-content: space-between;
-    gap: 15rem;
-}
-
-.logo_text_h1{
+.logo_text_h1 {
     font-size: 5rem;
     margin: 0;
+}
+
+.intro_description_container {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.intro_text_wrapper {
+    display: flex;
+    flex-direction: column;
 }
 
 .intro_text_h4 {
-    font-size: 1.5rem;
+    font-size: 2rem;
     line-height: 1.5;
     font-weight: 400;
-  }
-  
-  .intro_subtext_h6 {
+}
+
+.intro_subtext_h6 {
     font-size: 1.4rem;
     font-weight: 400;
     color: var(--polyGreen);
-  }
+    line-height: 1.5;
+}
 
 .intro_arrow_container {
-   padding-left: 10rem;
-}
-
-/**.body_container{
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    flex-wrap: wrap;
-}
-
-.logo_text_container{
-    display: flex;
-    align-items: flex-start;
-}
-
-.logo_text_h1{
-    font-size: 5rem;
-    margin: 0;
-}
-
-.logo_desc_wrapper{
-    display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    flex-grow: 1;
+    padding: 3rem;
+    padding-top: 10%;
 }
 
-.intro_desc_container {
-    margin-top: 2rem;
-  }
-  
-  .intro_text_h4 {
-    font-size: 1.5rem;
-    line-height: 1.5;
-    font-weight: 400;
-    margin: 1rem 0;
-  }
-  
-  .intro_subtext_h6 {
-    font-size: 1rem;
-    font-weight: 400;
-    margin-top: 1rem;
-    color: var(--polyGreen);
-  }
-  
-  .intro_arrow_container {
-   
-  }
+/**section 2*/
+.p-logo_images{
+    width: 100%;
+}
