--- a/styles/logo.css
+++ b/styles/logo.css
@@ -7,8 +7,8 @@ html {
 
 body {
     background-image: url(../public/background-img/background.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-size: contain;
+    background-repeat:no-repeat;
     font-family: 'Jost', sans-serif;
     font-size: 16px;
     padding: 3rem;
@@ -82,8 +82,6 @@ body {
     padding: 3rem;
 }
 
-.empty_div {}
-
 .logo_text_container {
     flex-grow: 1;
     display: flex;
@@ -130,6 +128,97 @@ body {
 }
 
 /**section 2*/
-.p-logo_images{
-    width: 100%;
+/**this container holds everything in section two*/
+.primary_logo{
+    margin-top: 9.5rem;
+}
+
+.p-logo_container{
+    display: flex;
+    
+    gap: 10rem;
+    background-image: url(../public/background-img/background.svg);
+    background-size:cover;
+    border-radius: 50rem;
+}
+
+/**This container holds the leftside (desktop) text*/
+.p-logo_text_container{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
+
+/**This container holds the rightside (desktop) logos*/
+.p-logo_logo_container{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    flex-wrap: wrap;
+}
+
+.p-logo_top_container{
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    padding-top: 5rem;
+    flex-wrap: wrap;
+    
+}
+
+.p-logo_bottom_container{
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    flex-wrap: wrap;
+}
+
+.p-logo_h1{
+    font-size: 5rem;
+    margin: 0;
+}
+
+.p-logo_h2{
+   font-size: 2rem;
+   margin: 0;
+}
+
+.p-logo_h3{
+    font-size: 2rem;
+    margin-bottom: 0.2rem;
+    font-weight: 500;
+}
+
+.p-logo_p{
+    font-size: 1.4rem;
+    margin: 0.9rem;
+    font-weight: 400;
+}
+
+.p-logo_top_container >div> img{
+    width: 80%;
+    border-radius: 5px;
+}
+
+.p-logo_bottom_container >div> img{
+    width: 80%;
+    border-radius: 5px;
+}
+
+@media only screen and (max-width: 820px) {
+    .p-logo_container{
+        gap: 0;
+    }
+
+    .p-logo_text_container{
+        width: 100%;
+    }
+
+    .intro_arrow_container{
+        justify-content: center;
+    }
+
+    .p-logo_container{
+        flex-wrap: wrap;
+    }
 }
