--- a/styles/color.css
+++ b/styles/color.css
@@ -3,14 +3,16 @@
 
 body {
     background-image: url(../public/background-img/background.svg);
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     font-family: 'Jost', sans-serif;
     font-size: 16px;
+    padding: 1rem;
+    margin: 0;
 }
 /**contains everything in the body*/
 .main {
-    padding: 3rem;
+    padding: 5rem;
 }
 
 
@@ -36,7 +38,7 @@ body {
     width: 100%;
     background: var(--mantisGreen);
     opacity: 0.9;
-    gap: 2rem;
+    gap: 1rem;
     margin: 0;
     border-radius: 3rem;
     display: flex;
@@ -71,6 +73,10 @@ body {
 }
 
 /** color-palette style*/
+hr{
+    width: 60vw;
+    margin-top: 5vh;
+}
 
 .color-forestgreen{
     height: 200px;
@@ -117,7 +123,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-top: 100vh;
+    margin-top: 50vh;
 }
 .left-color-container{
     display: flex;
@@ -133,9 +139,13 @@ body {
 }
 
 .color_text_h1 {
-    margin-top: 10vh;
+    font-family: 'Jost', sans-serif;
+    font-size: 64px;
+    
+
+   
     font-size: 5rem;
-    margin: 10vh;
+    margin: 3vh;
 }
 .forest-box-size{
     height: 250px;
@@ -187,6 +197,37 @@ h6{
     margin: 2px;
     margin-left: 4vw;
 }
+.dot{
+    height: 45px;
+    width: 45px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+}
+.color_info{
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
+
+}
+.color_info_dot{
+    width: 150px;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+.color_description{
+    width: 60vw;
+
+}
+.description_main_box{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+
+
 
 
 
@@ -201,9 +242,9 @@ h6{
         display: flex;
         flex-direction: column;
         justify-content:center;
-        margin-top: 150vh;
+        margin-top: 10vh;
         gap: 10vh;
-        margin-left: 20vw;
+        
     }
   
     
@@ -212,5 +253,21 @@ h6{
         flex-direction: column;
         margin: 14px;
         margin-left: 15vw;
+    }
+
+    .navBar_links_container{
+        display: flex;
+        flex-direction: column;
+    }
+    .text_color_palette{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .color_info{
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+    
     }
   }
