--- a/styles/logo.css
+++ b/styles/logo.css
@@ -8,7 +8,7 @@ html {
 body {
     background-image: url(../public/background-img/background.svg);
     background-size: contain;
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     font-family: 'Jost', sans-serif;
     font-size: 16px;
     padding: 3rem;
@@ -85,7 +85,6 @@ body {
 .logo_text_container {
     flex-grow: 1;
     display: flex;
-    justify-content: center;
 }
 
 .logo_text_h1 {
@@ -98,7 +97,6 @@ body {
     flex-grow: 1;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
 }
 
 .intro_text_wrapper {
@@ -129,96 +127,134 @@ body {
 
 /**section 2*/
 /**this container holds everything in section two*/
-.primary_logo{
+.primary_logo {
     margin-top: 9.5rem;
 }
 
-.p-logo_container{
+.p-logo_container {
     display: flex;
-    
     gap: 10rem;
-    background-image: url(../public/background-img/background.svg);
-    background-size:cover;
-    border-radius: 50rem;
 }
 
 /**This container holds the leftside (desktop) text*/
-.p-logo_text_container{
+.p-logo_text_container {
     display: flex;
     flex-direction: column;
     width: 30%;
 }
 
 /**This container holds the rightside (desktop) logos*/
-.p-logo_logo_container{
+.p-logo_logo_container {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
     flex-wrap: wrap;
 }
 
-.p-logo_top_container{
+.p-logo_top_container {
     display: flex;
     flex-direction: row;
     gap: 5rem;
     padding-top: 5rem;
-    flex-wrap: wrap;
-    
+
 }
 
-.p-logo_bottom_container{
+.p-logo_bottom_container {
     display: flex;
     flex-direction: row;
     gap: 5rem;
-    flex-wrap: wrap;
 }
 
-.p-logo_h1{
+.p-logo_mid_container {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+}
+
+.p-logo_h1 {
     font-size: 5rem;
     margin: 0;
 }
 
-.p-logo_h2{
-   font-size: 2rem;
-   margin: 0;
+.p-logo_h2 {
+    font-size: 2rem;
+    margin: 0;
 }
 
-.p-logo_h3{
+.p-logo_h3 {
     font-size: 2rem;
     margin-bottom: 0.2rem;
     font-weight: 500;
 }
 
-.p-logo_p{
+.p-logo_p {
     font-size: 1.4rem;
     margin: 0.9rem;
     font-weight: 400;
 }
 
-.p-logo_top_container >div> img{
+.p-logo_top_container>div>img {
     width: 80%;
     border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
-.p-logo_bottom_container >div> img{
+.p-logo_bottom_container>div>img {
     width: 80%;
     border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.p-logo_mid_container>div>img {
+    width: 80%;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.p-logo_mid_container>div>img {
+    width: 80%;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.hr_divider {
+    margin: 2rem;
+}
+
+.arrow_container {
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
 }
 
 @media only screen and (max-width: 820px) {
-    .p-logo_container{
+    .p-logo_container {
         gap: 0;
     }
 
-    .p-logo_text_container{
+    .p-logo_text_container {
         width: 100%;
     }
 
-    .intro_arrow_container{
+    .intro_arrow_container {
         justify-content: center;
     }
 
-    .p-logo_container{
+    .p-logo_container {
+        flex-wrap: wrap;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .p-logo_top_container {
+        flex-wrap: wrap;
+    }
+
+    .p-logo_mid_container {
+        flex-wrap: wrap;
+    }
+
+    .p-logo_bottom_container {
         flex-wrap: wrap;
     }
 }
