--- a/styles/iconsAndGraphics.css
+++ b/styles/iconsAndGraphics.css
@@ -3,7 +3,7 @@
 
 body {
     background-image: url(../public/background-img/background.svg);
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     font-family: 'Jost', sans-serif;
     font-size: 16px;
@@ -66,3 +66,158 @@ body {
     font-size: 0.8rem;
 }
 
+/**Body Content*/
+.body_container{
+    display: flex;
+    flex-direction: column;
+}
+
+.intro_text_h1{
+    font-size: 5rem;
+    margin: 0;
+}
+
+.intro_text_h4 {
+    font-size: 2rem;
+    line-height: 1.5;
+    font-weight: 400;
+}
+
+.intro_subtext_h6 {
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--polyGreen);
+    line-height: 1.5;
+}
+
+.introduction {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    padding: 3rem;
+}
+
+.logo_text_container {
+    flex-grow: 1;
+    display: flex;
+}
+
+.intro_description_container {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.intro_text_wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+/**content starts here*/
+.content_container{
+    display: flex;
+    
+    flex-direction: column;
+}
+
+.icons_graphics_images_container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+   gap: 10rem;
+}
+
+.interface_icons_container{
+    height: 40vh;
+    margin-bottom: 2rem;
+}
+
+.igi_h1{
+    font-size: 4rem;
+}
+
+.ui_icons_wrapper{
+    border: solid;
+    border-color: var(--sproutGreen);
+    display: flex;
+    gap: 2rem;
+    flex-wrap: wrap;
+    padding: 2rem;
+   
+}
+
+.text_container{
+ margin-top: 2rem;
+   width: 32rem;
+    display: flex;
+
+    
+}
+
+.igi_p_text{
+    font-size: 1.3rem; 
+}
+
+.graphics_wrapper{
+        border: solid;
+        border-color: var(--sproutGreen);
+        display: flex;
+        gap: 2rem;
+        width: 30vw;
+        flex-wrap: wrap;
+        padding: 2rem;
+}
+
+.images_wrapper{
+    border: solid;
+    border-color: var(--sproutGreen);
+    display: flex;
+    gap: 2rem;
+    width: 20vw;
+   flex-wrap: wrap;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rl_img{
+    width:20vw;
+    height: auto;
+}
+
+.div{
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    align-items: center;
+    
+}
+
+.vector{
+    width: 10vw;
+    height: auto;
+}
+
+@media only screen and (max-width: 1427px) {
+    .interface_icons_container{
+        margin-bottom: 13rem;
+    }
+}
+@media only screen and (max-width: 820px) {
+    .interface_icons_container{
+        margin-bottom: 0rem;
+    }
+    .div{
+        flex-wrap: wrap;
+       }
+}
+
+@media only screen and (max-width: 500px) {
+   .div{
+    flex-wrap: wrap;
+   }
+}
